"update to configuration"

--- a/polybar_themes/power-for-polybar.config
+++ b/polybar_themes/power-for-polybar.config
@@ -47,7 +47,7 @@
 type               = custom/text
 content-background = ${self.background-next}
 content-foreground = ${self.background}
-content            = ""
+content            = ""
 
 ;
 ; # Left-to-right end-of-line separator
@@ -65,7 +65,7 @@ content            = ""
 [powerline-modules/left-to-right-end-of-line-separator]
 type               = custom/text
 content-foreground = ${self.separator}
-content            = ""
+content            = ""
 
 ; ============================================================================ ;
 ;                             modules :: right-to-left
@@ -95,7 +95,7 @@ content            = ""
 type               = custom/text
 content-background = ${self.background-next}
 content-foreground = ${self.background}
-content            = ""
+content            = ""
 
 ;
 ; # Right-to-left end-of-line separator
@@ -113,7 +113,7 @@ content            = ""
 [powerline-modules/right-to-left-end-of-line-separator]
 type               = custom/text
 content-foreground = ${self.separator}
-content            = ""
+content            = ""
 
 ; ============================================================================ ;
 ;
@@ -145,28 +145,28 @@ content            = ""
 [powerline-templates/left-to-right-item]
 format-suffix-foreground              = ${self.background}
 format-suffix-background              = ${self.background-next}
-format-suffix                         = ""
+format-suffix                         = ""
 format-volume-suffix-foreground       = ${self.background}
 format-volume-suffix-background       = ${self.background-next}
-format-volume-suffix                  = ""
+format-volume-suffix                  = ""
 format-muted-suffix-foreground        = ${self.background}
 format-muted-suffix-background        = ${self.background-next}
-format-muted-suffix                   = ""
+format-muted-suffix                   = ""
 format-mounted-suffix-foreground      = ${self.background}
 format-mounted-suffix-background      = ${self.background-next}
-format-mounted-suffix                 = ""
+format-mounted-suffix                 = ""
 format-unmounted-suffix-foreground    = ${self.background}
-format-unmounted-suffix-background    = ${self.background-next
-format-unmounted-suffix               = "ຼ"
+format-unmounted-suffix-background    = ${self.background-next}
+format-unmounted-suffix               = ""
 format-connected-suffix-foreground    = ${self.background}
 format-connected-suffix-background    = ${self.background-next}
-format-connected-suffix               = ""
+format-connected-suffix               = ""
 format-disconnected-suffix-foreground = ${self.background}
 format-disconnected-suffix-background = ${self.background-next}
-format-disconnected-suffix            = ""
+format-disconnected-suffix            = ""
 content-suffix-foreground             = ${self.background}
 content-suffix-background             = ${self.background-next}
-content-suffix                        = ""
+content-suffix                        = ""
 
 ;
 ; # Left-to-right in-line item with separator
@@ -188,53 +188,53 @@ content-suffix                        = ""
 ; Prefixes
 format-prefix-foreground              = ${self.separator}
 format-prefix-background              = ${self.background}
-format-prefix                         = ""
+format-prefix                         = ""
 format-volume-prefix-foreground       = ${self.separator}
 format-volume-prefix-background       = ${self.background}
-format-volume-prefix                  = ""
+format-volume-prefix                  = ""
 format-muted-prefix-foreground        = ${self.background}
 format-muted-prefix-background        = ${self.separator}
-format-muted-prefix                   = ""
+format-muted-prefix                   = ""
 format-mounted-prefix-foreground      = ${self.separator}
 format-mounted-prefix-background      = ${self.background}
-format-mounted-prefix                 = ""
+format-mounted-prefix                 = ""
 format-unmounted-prefix-foreground    = ${self.separator}
 format-unmounted-prefix-background    = ${self.background}
-format-unmounted-prefix               = ""
+format-unmounted-prefix               = ""
 format-connected-prefix-foreground    = ${self.separator}
 format-connected-prefix-background    = ${self.background}
-format-connected-prefix               = ""
+format-connected-prefix               = ""
 format-disconnected-prefix-foreground = ${self.separator}
 format-disconnected-prefix-background = ${self.background}
-format-disconnected-prefix            = ""
+format-disconnected-prefix            = ""
 content-prefix-foreground             = ${self.separator}
 content-prefix-background             = ${self.background}
-content-prefix                        = ""
+content-prefix                        = ""
 ; Suffixes
 format-suffix-foreground              = ${self.background}
 format-suffix-background              = ${self.separator}
-format-suffix                         = ""
+format-suffix                         = ""
 format-volume-suffix-foreground       = ${self.background}
 format-volume-suffix-background       = ${self.separator}
-format-volume-suffix                  = ""
+format-volume-suffix                  = ""
 format-muted-suffix-foreground        = ${self.separator}
 format-muted-suffix-background        = ${self.background}
-format-muted-suffix                   = ""
+format-muted-suffix                   = ""
 format-mounted-suffix-foreground      = ${self.background}
 format-mounted-suffix-background      = ${self.separator}
-format-mounted-suffix                 = ""
+format-mounted-suffix                 = ""
 format-unmounted-suffix-foreground    = ${self.background}
 format-unmounted-suffix-background    = ${self.separator}
-format-unmounted-suffix               = ""
+format-unmounted-suffix               = ""
 format-connected-suffix-foreground    = ${self.background}
 format-connected-suffix-background    = ${self.separator}
-format-connected-suffix               = ""
+format-connected-suffix               = ""
 format-disconnected-suffix-foreground = ${self.background}
 format-disconnected-suffix-background = ${self.separator}
-format-disconnected-suffix            = ""
+format-disconnected-suffix            = ""
 content-suffix-foreground             = ${self.background}
 content-suffix-background             = ${self.separator}
-content-suffix                        = ""
+content-suffix                        = ""
 
 ;
 ; # Left-to-right line-starting item with separator
@@ -260,28 +260,28 @@ content-suffix                        = ""
 ; Suffixes needed only
 format-suffix-foreground              = ${self.background}
 format-suffix-background              = ${self.separator}
-format-suffix                         = ""
+format-suffix                         = ""
 format-volume-suffix-foreground       = ${self.background}
 format-volume-suffix-background       = ${self.separator}
-format-volume-suffix                  = ""
+format-volume-suffix                  = ""
 format-muted-suffix-foreground        = ${self.separator}
 format-muted-suffix-background        = ${self.background}
-format-muted-suffix                   = ""
+format-muted-suffix                   = ""
 format-mounted-suffix-foreground      = ${self.background}
 format-mounted-suffix-background      = ${self.separator}
-format-mounted-suffix                 = ""
+format-mounted-suffix                 = ""
 format-unmounted-suffix-foreground    = ${self.background}
 format-unmounted-suffix-background    = ${self.separator}
-format-unmounted-suffix               = ""
+format-unmounted-suffix               = ""
 format-connected-suffix-foreground    = ${self.background}
 format-connected-suffix-background    = ${self.separator}
-format-connected-suffix               = ""
+format-connected-suffix               = ""
 format-disconnected-suffix-foreground = ${self.background}
 format-disconnected-suffix-background = ${self.separator}
-format-disconnected-suffix            = ""
+format-disconnected-suffix            = ""
 content-suffix-foreground             = ${self.background}
 content-suffix-background             = ${self.separator}
-content-suffix                        = ""
+content-suffix                        = ""
 
 ; ============================================================================ ;
 ;                             templates :: right-to-left
@@ -307,28 +307,28 @@ content-suffix                        = ""
 [powerline-templates/right-to-left-item]
 format-prefix-foreground              = ${self.background}
 format-prefix-background              = ${self.background-next}
-format-prefix                         = ""
+format-prefix                         = ""
 format-volume-prefix-foreground       = ${self.background}
 format-volume-prefix-background       = ${self.background-next}
-format-volume-prefix                  = ""
+format-volume-prefix                  = ""
 format-muted-prefix-foreground        = ${self.background}
 format-muted-prefix-background        = ${self.background-next}
-format-muted-prefix                   = ""
+format-muted-prefix                   = ""
 format-mounted-prefix-foreground      = ${self.background}
 format-mounted-prefix-background      = ${self.background-next}
-format-mounted-prefix                 = ""
+format-mounted-prefix                 = ""
 format-unmounted-prefix-foreground    = ${self.background}
 format-unmounted-prefix-background    = ${self.background-next}
-format-unmounted-prefix               = ""
+format-unmounted-prefix               = ""
 format-connected-prefix-foreground    = ${self.background}
 format-connected-prefix-background    = ${self.background-next}
-format-connected-prefix               = ""
+format-connected-prefix               = ""
 format-disconnected-prefix-foreground = ${self.background}
 format-disconnected-prefix-background = ${self.background-next}
-format-disconnected-prefix            = ""
+format-disconnected-prefix            = ""
 content-prefix-foreground             = ${self.background}
 content-prefix-background             = ${self.background-next}
-content-prefix                        = ""
+content-prefix                        = ""
 
 ;
 ; # Right-to-left in-line item with separator
@@ -350,53 +350,53 @@ content-prefix                        = ""
 ; Prefixes
 format-prefix-foreground              = ${self.background}
 format-prefix-background              = ${self.separator}
-format-prefix                         = ""
+format-prefix                         = ""
 format-volume-prefix-foreground       = ${self.background}
 format-volume-prefix-background       = ${self.separator}
-format-volume-prefix                  = ""
+format-volume-prefix                  = ""
 format-muted-prefix-foreground        = ${self.separator}
 format-muted-prefix-background        = ${self.background}
-format-muted-prefix                   = ""
+format-muted-prefix                   = ""
 format-mounted-prefix-foreground      = ${self.background}
 format-mounted-prefix-background      = ${self.separator}
-format-mounted-prefix                 = ""
+format-mounted-prefix                 = ""
 format-unmounted-prefix-foreground    = ${self.background}
 format-unmounted-prefix-background    = ${self.separator}
-format-unmounted-prefix               = ""
+format-unmounted-prefix               = ""
 format-connected-prefix-foreground    = ${self.background}
 format-connected-prefix-background    = ${self.separator}
-format-connected-prefix               = ""
+format-connected-prefix               = ""
 format-disconnected-prefix-foreground = ${self.background}
 format-disconnected-prefix-background = ${self.separator}
-format-disconnected-prefix            = ""
+format-disconnected-prefix            = ""
 content-prefix-foreground             = ${self.background}
 content-prefix-background             = ${self.separator}
-content-prefix                        = ""
+content-prefix                        = ""
 ; Suffixes
 format-suffix-foreground              = ${self.separator}
 format-suffix-background              = ${self.background}
-format-suffix                         = ""
+format-suffix                         = ""
 format-volume-suffix-foreground       = ${self.separator}
 format-volume-suffix-background       = ${self.background}
-format-volume-suffix                  = ""
+format-volume-suffix                  = ""
 format-muted-suffix-foreground        = ${self.background}
 format-muted-suffix-background        = ${self.separator}
-format-muted-suffix                   = ""
+format-muted-suffix                   = ""
 format-mounted-suffix-foreground      = ${self.separator}
 format-mounted-suffix-background      = ${self.background}
-format-mounted-suffix                 = ""
+format-mounted-suffix                 = ""
 format-unmounted-suffix-foreground    = ${self.separator}
 format-unmounted-suffix-background    = ${self.background}
-format-unmounted-suffix               = ""
+format-unmounted-suffix               = ""
 format-connected-suffix-foreground    = ${self.separator}
 format-connected-suffix-background    = ${self.background}
-format-connected-suffix               = ""
+format-connected-suffix               = ""
 format-disconnected-suffix-foreground = ${self.separator}
 format-disconnected-suffix-background = ${self.background}
-format-disconnected-suffix            = ""
+format-disconnected-suffix            = ""
 content-suffix-foreground             = ${self.separator}
 content-suffix-background             = ${self.background}
-content-suffix                        = ""
+content-suffix                        = ""
 
 ;
 ; # Right-to-left line-starting item with separator
@@ -422,25 +422,25 @@ content-suffix                        = ""
 ; Prefixes needed only
 format-prefix-foreground              = ${self.background}
 format-prefix-background              = ${self.separator}
-format-prefix                         = ""
+format-prefix                         = ""
 format-volume-prefix-foreground       = ${self.background}
 format-volume-prefix-background       = ${self.separator}
-format-volume-prefix                  = ""
+format-volume-prefix                  = ""
 format-muted-prefix-foreground        = ${self.separator}
 format-muted-prefix-background        = ${self.background}
-format-muted-prefix                   = ""
+format-muted-prefix                   = ""
 format-mounted-prefix-foreground      = ${self.background}
 format-mounted-prefix-background      = ${self.separator}
-format-mounted-prefix                 = ""
+format-mounted-prefix                 = ""
 format-unmounted-prefix-foreground    = ${self.background}
 format-unmounted-prefix-background    = ${self.separator}
-format-unmounted-prefix               = ""
+format-unmounted-prefix               = ""
 format-connected-prefix-foreground    = ${self.background}
 format-connected-prefix-background    = ${self.separator}
-format-connected-prefix               = ""
+format-connected-prefix               = ""
 format-disconnected-prefix-foreground = ${self.background}
 format-disconnected-prefix-background = ${self.separator}
-format-disconnected-prefix            = ""
+format-disconnected-prefix            = ""
 content-prefix-foreground             = ${self.background}
 content-prefix-background             = ${self.separator}
-content-prefix                        = ""
+content-prefix                        = ""
